Fixed bug with sidenav icon to collapsed state

--- a/src/app/core/components/core.component.css
+++ b/src/app/core/components/core.component.css
@@ -3,8 +3,17 @@
   height: auto;
   color: var(--silver);
    /*background: rgba(255, 255, 255, 0.2); */
-  margin: 16px 30px;
+  margin: 16px auto 16px 25px;
+  /*text-align: center;*/
+}
 
+.collapsed-logo {
+  width: 250px;
+  height: auto;
+  color: var(--silver);
+  /*background: rgba(255, 255, 255, 0.2); */
+  margin: 16px auto 16px 33px;
+  /*text-align: center;*/
 }
 
 .logo.anticon-gift {
@@ -12,7 +21,7 @@
   font-size: 30px;
 }
 
-.logo.logo-text {
+.logo.logo-text, .collapsed-logo.logo-text {
   color: var(--silver);
   font-size: 1.4rem;
   margin-left: 0.65rem;
